--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#151515">
-    <title>WebGithub | Portfolio</title>
+    <title>WebGithub | Portfólio</title>
     
-    <link rel="icon" href="./image/github.png" >
 
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/pages/Home.css">
@@ -49,10 +48,11 @@
             </div>
             <div class="ContainerText">
                 <h1> Bem Vindo </h1>
-                <p> Ola eu sou <br/>
-                    Jean Carlos tenho 17 anos e estudo programacao<br/> 
-                    sou de Louveira - SP e estou a proucuro ingressar na area <br/>   
-                    aqui esta meu portfolio... 
+                <p> Olá eu sou <br/>
+                    Jean Carlos tenho 17 anos e estudo programação<br/> 
+                    sou de Louveira - SP,<br/> 
+                    estou a proucura do primeiro emprego<br/>
+                    para ingressar na, area aqui esta meu portfólio...  
                 </p>
                 
             </div>
@@ -63,7 +63,7 @@
             <div class="textos">
                 <h1>Habilidades</h1>
                 <p> Tecnologias que utilizo <br/>
-                    no meu portfolio, e estudo <br/>
+                    no meu portfólio, e estudo <br/>
                     no meu dia a dia.</p>
             </div>
             <div class="imagens">
