--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Jean Carlos tenho 17 anos e estudo programação<br/> 
                     sou de Louveira - SP,<br/> 
                     estou a proucura do primeiro emprego<br/>
-                    para ingressar na, area aqui esta meu portfólio...  
+                    para ingressar na area aqui esta meu portfólio...  
                 </p>
                 
             </div>
