--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="GridContainer">
         
         <div class="TopBarContainer">
-            <img class="IconGit"src="../image/favicon.png"alt="Github">
+            <img class="IconGit"src="image/favicon.png"alt="Github">
             <div class="Topbar"> 
                 
                 <div class="nameHome"
