--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
             <div class="textos">
                 <h1>Habilidades</h1>
                 <p> Tecnologias que utilizo <br/>
-                    no meu portfólio, e estudo <br/>
-                    no meu dia a dia.</p>
+                    no meu portfólio.
             </div>
             <div class="imagens">
                 <img src="./image/javascriptImage.jpg" alt="javascript">
@@ -80,7 +79,7 @@
             <div class="textos">
                 <h1> Ferramentas</h1>
                 <p>Algumas ferramentas <br/>
-                    que utilizo no dia a dia</p>
+                    que utilizo no dia a dia.</p>
             </div>
             <div class="imagens">
                 <img src="./image/notion-logo-no-background.png" alt="Notion">
