--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
             <div>
             <p> Redes Sociais</p>
             <a href="https://www.linkedin.com/in/jean-carlos-fernandes-5b6bb51b2/">
-                <img  src="../../assets/IconLinkedin.png" alt="Linkedin">
+                <img  src="./assets/IconLinkedin.png" alt="Linkedin">
             </a>
             <a href="https://github.com/jeanCarl00s">
-                <img src="../../assets/favicon.png" alt="Github">
+                <img src="./assets/favicon.png" alt="Github">
             </a>
             <a href="https://www.instagram.com/jean.carl00s/">
-                <img src="../../assets/IconInstagram.png" alt="Instagram">
+                <img src="./assets/IconInstagram.png" alt="Instagram">
             </a>
             </div>
         </footer>      
