--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                     </a>
                 </div>
                 <div class="names">
-                    <a href="./pages/Projetos"> 
+                    <a href="./pages/Projetos/"> 
                         Projetos
                     </a>
                 </div>
                 <div class="names">
-                    <a href="./pages/Contato"> 
+                    <a href="./pages/Contato/"> 
                         Contato
                     </a>
                 </div>
