--- a/pages/Contato/index.html
+++ b/pages/Contato/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </div>
                 <div class="names">
-                    <a href="../../pages/Projetos/"> 
+                    <a href="../Projetos/"> 
                         Projetos
                     </a>
                 </div>
