--- a/src/pages/Projects/index.html
+++ b/src/pages/Projects/index.html
@@ -26,7 +26,7 @@
       <div class="Header">
         <div class="ContainerTopbar">
           <div class="IconContainer">
-            <img class="IconGit" src="/src/assets/faviconWhite.jpg" alt="" />
+            <img class="IconGit" src="../../assets/faviconWhite.jpg" alt="" />
             <a href="/index.html">Portfólio</a>
           </div>
 
