--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="./src/styles/main.css">
     <link rel="stylesheet" href="./src/styles/Home.css">
-    <link rel="stylesheet" href="./src/styles/components/Box.css">
     <link rel="stylesheet" href="./src/styles/components/Topbar.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -49,9 +48,9 @@
     
         <div class="intro">
             <div class="bar">
-                <div style="background-color: #42378f;background-image: linear-gradient(315deg, #42378f 0%, #f53844 74%);animation: aparecer 2s normal"></div>
-                <div style="background-color: #fbb034;background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%); animation: aparecer 2s normal;"></div>
-                <div style="background-color: #00b712; background-image: linear-gradient(315deg, #00b712 0%, #5aff15 74%); animation: aparecer 2s normal;"></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
             <div class="TextContainer">
                 <h1>Olá,eu sou Jean Carlos</h1>
