--- a/src/pages/Projects/index.html
+++ b/src/pages/Projects/index.html
@@ -23,68 +23,148 @@
   </head>
   <body>
     <div class="Content">
-      <div class="Header">
-        <div class="ContainerTopbar">
-          <div class="IconContainer">
-            <img class="IconGit" src="../../assets/faviconWhite.jpg" alt="" />
-            <a href="/index.html">Portfólio</a>
-          </div>
+      <div class="Container">
+        <div class="Header">
+          <div class="ContainerTopbar">
+            <div class="IconContainer">
+              <img class="IconGit" src="../../assets/faviconWhite.jpg" alt="" />
+              <a href="/index.html">Portfólio</a>
+            </div>
 
-          <div class="Topbar">
-            <div class="names">
-              <a href="../../../index.html"> Home </a>
-            </div>
-            <div class="names">
-              <a style="opacity: 0.5" href="../Projects/"> Projetos </a>
-            </div>
-            <div class="names">
-              <a href="../About/"> Sobre </a>
+            <div class="Topbar">
+              <div class="names">
+                <a href="../../../index.html"> Home </a>
+              </div>
+              <div class="names">
+                <a style="opacity: 0.5" href="../Projects/"> Projetos </a>
+              </div>
+              <div class="names">
+                <a href="../About/"> Sobre </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="intro">
-        <div class="bar">
-          <div
-            style="
-              background-color: #42378f;
-              background-image: linear-gradient(
-                315deg,
-                #42378f 0%,
-                #f53844 74%
-              );
-              animation: aparecer 2s normal;
-            "
-          ></div>
-          <div
-            style="
-              background-color: #fbb034;
-              background-image: linear-gradient(
-                315deg,
-                #fbb034 0%,
-                #ffdd00 74%
-              );
-              animation: aparecer 2s normal;
-            "
-          ></div>
-          <div
-            style="
-              background-color: #00b712;
-              background-image: linear-gradient(
-                315deg,
-                #00b712 0%,
-                #5aff15 74%
-              );
-              animation: aparecer 2s normal;
-            "
-          ></div>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
+            <h1>Proffy</h1>
+            <p>
+              Sua plataforma de estudos online
+              <a href="">Repositorio</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> JavaScript
+              <span style="color: #4D66BE;">></span> CSS
+              <span style="color: #4D66BE;">></span> HTML
+            </h3>           
+          </div>
+          <div class="IMGContainer">
+            <img class="MacBook" src="../../assets/MacBookNLW2.png" />
+          </div>
+          </div>
         </div>
-        <div class="TextContainer">
-          <h1>Projeto</h1>
-          <p>
-            <br />
-            <a href="">Repositorio</a>.
-          </p>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
+              <h1>Happy Web</h1>
+            <p>
+              Leve felicidade para o mundo,<br/>
+              Adote uma crianca.<br/>
+              <a href="">Repositorio</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> JavaScript
+              <span style="color: #4D66BE;">></span> CSS
+              <span style="color: #4D66BE;">></span> HTML
+            </p> 
+            </div>
+            <div class="IMGContainer">
+              <img class="MacBook" src="../../assets/MacBookNLW3.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
+              <h1>Move.it</h1>
+            <p>
+              Site de tecnica de concentracao<br/>
+              Pomodoro.<br/>
+              <a href="">Repositorio</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> TypeScript <br/>
+              <span style="color: #4D66BE;">></span> StyledComponents
+            </h3>
+            </div>
+            <div class="IMGContainer">
+              <img class="MacBook" src="../../assets/MacBookNLW4.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
+              <h1>Gameplay</h1>
+            <p>
+              Agende sua Gameplay<br/> 
+              com seus amigos
+              <a href="">Repositorio</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> React-Native <br/>
+              <span style="color: #4D66BE;">></span> TypeScript <br/>
+              <span style="color: #4D66BE;">></span> StyledComponents
+            </h3>
+            </div>
+            <div class="IMGContainer">
+              <img class="Iphone" src="../../assets/IphoneNLW6.png">
+            </div>
+          </div>
+        </div>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
+              <h1>Insider</h1>
+            <p>
+              App encurtador de Links<br/>
+              <a href="">Repositorio</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> React-Native <br/>
+              <span style="color: #4D66BE;">></span> Type-Script <br/>
+              <span style="color: #4D66BE;">></span> StyledComponents
+            </h3>
+            </div>
+            <div class="IMGContainer">
+              <img class="Iphone" src="../../assets/IphoneInsider1.png">
+            </div>
+          </div>
         </div>
       </div>
     </div>
