--- a/src/pages/Projects/index.html
+++ b/src/pages/Projects/index.html
@@ -52,10 +52,34 @@
           </div>
           <div class="BoxContainer">
             <div class="TextContainer">
+            <h1>Blog</h1>
+            <p>
+              Meu Blog sobre <br/>
+              Um pouco da minha semana <br/>
+              <a href="https://github.com/JeanCarl00s/Blog">Repositório</a>.
+            </p>
+            <h3> 
+              <span style="color: #4D66BE;">></span> CSS
+              <span style="color: #4D66BE;">></span> HTML
+            </h3>           
+          </div>
+          <div class="IMGContainer">
+            <img class="MacBook" src="../../assets/MacBookNLW2.png" />
+          </div>
+          </div>
+        </div>
+        <div class="Box">
+          <div class="bar">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="BoxContainer">
+            <div class="TextContainer">
             <h1>Proffy</h1>
             <p>
-              Sua plataforma de estudos online
-              <a href="">Repositorio</a>.
+              Sua plataforma de estudos online <br/>
+              <a href="https://github.com/JeanCarl00s/Proffy">Repositório</a>.
             </p>
             <h3> 
               <span style="color: #4D66BE;">></span> JavaScript
@@ -79,8 +103,8 @@
               <h1>Happy Web</h1>
             <p>
               Leve felicidade para o mundo,<br/>
-              Adote uma crianca.<br/>
-              <a href="">Repositorio</a>.
+              Adote uma criança.<br/>
+              <a href="https://github.com/JeanCarl00s/Happy">Repositório</a>.
             </p>
             <h3> 
               <span style="color: #4D66BE;">></span> JavaScript
@@ -103,9 +127,9 @@
             <div class="TextContainer">
               <h1>Move.it</h1>
             <p>
-              Site de tecnica de concentracao<br/>
+              Site de técnica de concentração<br/>
               Pomodoro.<br/>
-              <a href="">Repositorio</a>.
+              <a href="https://github.com/JeanCarl00s/Move-it">Repositório</a>.
             </p>
             <h3> 
               <span style="color: #4D66BE;">></span> TypeScript <br/>
@@ -128,8 +152,8 @@
               <h1>Gameplay</h1>
             <p>
               Agende sua Gameplay<br/> 
-              com seus amigos
-              <a href="">Repositorio</a>.
+              com seus amigos <br/>
+              <a href="https://github.com/JeanCarl00s/gameplay">Repositório</a>.
             </p>
             <h3> 
               <span style="color: #4D66BE;">></span> React-Native <br/>
@@ -150,10 +174,10 @@
           </div>
           <div class="BoxContainer">
             <div class="TextContainer">
-              <h1>Insider</h1>
+              <h1>MyLink</h1>
             <p>
-              App encurtador de Links<br/>
-              <a href="">Repositorio</a>.
+              App encurtador de Links <br/>
+              <a href="https://github.com/JeanCarl00s/MyLink">Repositório</a>.
             </p>
             <h3> 
               <span style="color: #4D66BE;">></span> React-Native <br/>
