--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         </a>
                     </div>
                     <div class="names">
-                        <a href="./src/pages/Projects/"> 
+                        <a href="./src/pages/Projetos/"> 
                             Projetos
                         </a>
                     </div>
                     <div class="names">
-                        <a href="./src/pages/About/"> 
+                        <a href="./src/pages/Sobre/"> 
                             Sobre
                         </a>
                     </div>
@@ -56,7 +56,7 @@
                 <h1>Olá,eu sou Jean Carlos</h1>
                 <p>
                     Estudante de programação, tenho 17 anos e amo tecnologia, <br/>
-                    conheça mais sobre mim e meus <a href="./src/pages/projects.html">projetos</a>.
+                    conheça mais sobre mim e meus <a href="./src/pages/Projetos/">projetos</a>.
                 </p>
             </div>
             <div class="socialContainer" >
