--- a/src/pages/Projetos/index.html
+++ b/src/pages/Projetos/index.html
@@ -58,13 +58,13 @@
               <a href="https://github.com/JeanCarl00s/Proffy">Repositório</a>.
             </p>
             <h3> 
-              <span style="color: #4D66BE;">></span> JavaScript
-              <span style="color: #4D66BE;">></span> CSS
+              <span style="color: #4D66BE;">></span> JavaScript<br/>
+              <span style="color: #4D66BE;">></span> CSS<br/>
               <span style="color: #4D66BE;">></span> HTML
             </h3>           
           </div>
           <div class="IMGContainer">
-            <img class="MacBook" src="../../assets/MacBookNLW2.png" />
+            <img class="Laptop" src="../../assets/MacBookNLW2.png" />
           </div>
           </div>
         </div>
@@ -83,13 +83,13 @@
               <a href="https://github.com/JeanCarl00s/Happy">Repositório</a>.
             </p>
             <h3> 
-              <span style="color: #4D66BE;">></span> JavaScript
-              <span style="color: #4D66BE;">></span> CSS
+              <span style="color: #4D66BE;">></span> JavaScript<br/>
+              <span style="color: #4D66BE;">></span> CSS<br/>
               <span style="color: #4D66BE;">></span> HTML
             </p> 
             </div>
             <div class="IMGContainer">
-              <img class="MacBook" src="../../assets/MacBookNLW3.png" alt="">
+              <img class="Laptop" src="../../assets/MacBookNLW3.png" alt="">
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             </h3>
             </div>
             <div class="IMGContainer">
-              <img class="MacBook" src="../../assets/MacBookNLW4.png" alt="">
+              <img class="Laptop" src="../../assets/MacBookNLW4.png" alt="">
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             </h3>
             </div>
             <div class="IMGContainer">
-              <img class="Iphone" src="../../assets/IphoneNLW6.png">
+              <img class="Celular" src="../../assets/IphoneNLW6.png">
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
             </h3>
             </div>
             <div class="IMGContainer">
-              <img class="Iphone" src="../../assets/IphoneInsider1.png">
+              <img class="Celular" src="../../assets/IphoneInsider1.png">
             </div>
           </div>
         </div>
@@ -184,7 +184,7 @@
             </h3>
             </div>
             <div class="IMGContainer">
-              <img  class="Iphone" src="../../assets/IphoneKT.png">
+              <img  class="Celular" src="../../assets/IphoneKT.png">
             </div>
           </div>
         </div>
